<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/dateView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rectanglev2"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Spinner
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:gravity="center"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/counter"
        android:layout_width="96dp"
        android:layout_height="98dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/counter_00"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="128dp"
        android:layout_height="66dp"
        android:layout_marginBottom="96dp"
        android:orientation="vertical"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/submit"
            android:layout_width="115dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_none"
            android:foregroundGravity="center"
            android:gravity="center"
            android:shadowColor="#000fff"
            android:text="@string/count"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="75dp"
        android:layout_height="39dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/rectangle_none"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/reset"
        android:textColor="#FDFDFD"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/wholeString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetBtn" />

    <TextView
        android:id="@+id/alerts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wholeString"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/setNewCount"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:autofillHints="Enter"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/resetBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter" />

    <Button
        android:id="@+id/setNewCountBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/set"
        app:layout_constraintBaseline_toBaselineOf="@+id/setNewCount"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1060037193333326/4803085139"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>